# paozhu

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  README_CN.md  README_EN.md  ubuntu install gcc.txt  vcpkg-configuration.json  vcpkg.json  xmake.lua
.github/workflows/: github-actions-demo.yml  macos.yml  ubuntu.yml  vcpkg.yml  windows.yml
common/: autocontrolmethod.hpp  autorestfulpaths.hpp  cost_define.h  httphook.cpp  json_reflect_headers.h  reghttpmethod.hpp  reghttpmethod_pre.hpp  sockets_method_reg.hpp  websockets_method_reg.hpp
conf/: aaa.sql  acme.conf  controlbuild.conf  cppcms.sql  directory.html  hello_world.sql  krma.sql  mysqlorm.conf  orm.conf  pinyin.txt  server.conf  test.conf  test.conf.bak  ueditor_config.json  viewbuild.conf  www.869869.com.csr  www.869869.com.key  www.869869.com.pem  www.hggq.com  www.hggq.com.key  www.hggq.com.pem  www.youdomain.com.key
controller/: testviewso.cpp
controller/include/: apicrudtest.h  devcors.h  imageapi.h  techempower.h  test_acme.h  test_co_handle.h  test_cols.h  test_customstruct.h  test_dir_name.h  test_escape_str.h  test_leftjoin.h  test_parse_ini.h  test_pzexcel.h  test_pzjpg.h  test_pzpng.h  test_reverse.h  test_rpc_handle.h  test_socket_handle.h  test_sql_commit.h  test_sql_json.h  test_sql_query.h  test_webpdf.h  test_websocket_handle.h  test_weixin.h  testaddclienttask.h  testcmake.h  testcommit.h  testcookie.h  testcors.h  testcowaitclient.h  testcrud.h  testdownloadauth.h  testfield_num.h  testformpost.h  testhello.h  testhttpclient.h  testipsearch.h  testjson.h  testjsonreflect.h  testlogin.h  (+26 more)
controller/include/admin/: articles.h  attachfile.h  category.h  main.h  marbrand.h  marhome.h  marproduct.h  topics.h
controller/include/superadmin/: supermain.h
controller/src/: apicrudtest.cpp  devcors.cpp  imageapi.cpp  techempower.cpp  test_acme.cpp  test_co_handle.cpp  test_cols.cpp  test_customstruct.cpp  test_dir_name.cpp  test_escape_str.cpp  test_leftjoin.cpp  test_parse_ini.cpp  test_pzexcel.cpp  test_pzjpg.cpp  test_pzpng.cpp  test_reverse.cpp  test_rpc_handle.cpp  test_socket_handle.cpp  test_sql_commit.cpp  test_sql_json.cpp  test_sql_query.cpp  test_webpdf.cpp  test_websocket_handle.cpp  test_weixin.cpp  testaddclienttask.cpp  testcmake.cpp  testcommit.cpp  testcookie.cpp  testcors.cpp  testcowaitclient.cpp  testcrud.cpp  testcurd.cpp  testdownloadauth.cpp  testfield_num.cpp  testformpost.cpp  testhello.cpp  testhttpclient.cpp  testipsearch.cpp  testjson.cpp  testjsonreflect.cpp  (+26 more)
controller/src/admin/: articles.cpp  attachfile.cpp  (+6 more)
docs/: CNAME  index.html  kk.xlsx  kk_out.xlsx  mm.xlsx  mmm.xlsx  nn.xlsx  qq.xlsx  tt.xlsx  webpdf_tutorial.html  webpdf_tutorial_en.html
docs/font/: courier.json  courierb.json  courierbi.json  courieri.json  helvetica.json  helveticab.json  helveticabi.json  helveticai.json  symbol.json  times.json  timesb.json  timesbi.json  timesi.json  zapfdingbats.json
libs/department/: department_type.h  department_type_jsonreflect.cpp
libs/img/: editorupload_type.h  editorupload_type_jsonreflect.cpp  upload_images.cpp  upload_images.h
libs/ipdata/: ip_data_obj.cpp  ip_data_obj.h
libs/markdown/: markdown2html.cpp  markdown2html.h
libs/pinyin/: hanyu_to_pinyin.cpp  hanyu_to_pinyin.h  pinyin_biao.txt
libs/types/: json_ref_obj.cpp  json_ref_obj.h  json_ref_obj.json  techempower_json_jsonreflect.cpp  topics_type.h  topics_type_jsonreflect.cpp
models/: Fortune.cpp  World.cpp  orm.h
models/cms/: Article.cpp  Blogcatalog.cpp  Brand.cpp  Catalogue.cpp  Department.cpp  Homeblock.cpp  Logininfo.cpp  Product.cpp  Productparam.cpp  Siteinfo.cpp  Sitelog.cpp  Superadmin.cpp  Sysperms.cpp  Sysrole.cpp  Sysroleperms.cpp  Sysuser.cpp  Testa.cpp  Testb.cpp  Topic.cpp  Topicset.cpp  User.cpp  Xmeet.cpp  Xproject.cpp  Xtalk.cpp  Xtask.cpp
models/include/: Fortune.h  World.h
orm/: Fortune.sql  article_mysql.h  blogcatalog_mysql.h  brand_mysql.h  catalogue_mysql.h  department_mysql.h  fortune_mysql.h  homeblock_mysql.h  logininfo_mysql.h  orm.h  sysperms_mysql.h  sysrole_mysql.h  sysuser_mysql.h  testa_mysql.h  testb_mysql.h  world_mysql.h  xproject_mysql.h  xtask_mysql.h
orm/_rawsqlfile/: cms_Article.sql  cms_Blogcatalog.sql  cms_Homeblock.sql  cms_Logininfo.sql  cms_Siteinfo.sql  cms_Superadmin.sql  cms_Sysperms.sql  cms_Sysrole.sql  cms_Sysuser.sql  cms_Testa.sql  cms_Testb.sql  cms_Topic.sql  cms_User.sql
orm/cms/: Article.sql  Department.sql  Logininfo.sql  Siteinfo.sql  Testa.sql  Topic.sql  User.sql
orm/include/: fortune_base.h  fortune_mysql.h  fortunebase.h  world_base.h  world_mysql.h  worldbase.h
sockets/: my_test_socket.hpp
startup/: testhttpclient.cpp
test/: ipconvert.cpp  ipconvert.hpp  test.cpp  test_mysql_orm.cpp  testdaemon.cpp
view/admin/: addarticle.html  addhomecontent.html  addhomehot.html  addhomepic.html  addhometext.html  addhometopic.html  addproduct.html  addtopic.html  addtopicsidepick.html  addtopicsidetext.html  copyright.html  editarticle.html  edithomeblockmulit.html  edithomecontent.html  edithomehot.html  edithomepic.html  edithometext.html  edithometopic.html  editpassword.html  editproduct.html  edittopic.html  edittopicsidepick.html  edittopicsidetext.html  favicon.html  fileupload.html  footscript.html  homedesign.html  listarticle.html  listproduct.html  login.html  main.html  marbrand.html  marcategory.html  marhome.html  marproductattach.html  martopic.html  martopicside.html  siteinfo.html  sitelogo.html  userinfo.html  (+1 more)
view/cms/: add.html  edit.html  list.html  show.html
view/home/: header.html
view/login/: login.html
view/superadmin/: addsiteinfo.html  adduser.html  deletesiteinfo.html  editpassword.html  editsiteinfo.html  edituser.html  listuser.html  login.html  main.html  siteinfo.html  userlist.html  welcome.html
view/techempower/: fortunes.html
viewsrc/include/: regviewmethod.hpp  viewsrc.h
websockets/: loopwebsockets.hpp
websockets/include/: loopwebsockets.hpp  mywebsockets.hpp
www/default/: 500test.html  addpost.html  index.html  sendmail.html  testpost.html  websocket.html
(+204 files in other folders)
